--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
 
 <body>
 	<nav>
-		<div class="nav-logo-container">
-			<img class="nav-logo" src="images/green-health-logo.png">
+		<div class="nav-title-container">
 			<h2>Mental Health Awareness</h2>
+		</div>
+		<div class="nav-logo-container">
+			<img src="images/green-health-logo.png">
 		</div>
 		<div class="nav-links-container">
 			<a href="index.html">Home</a>
