--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Mental Health Awareness</title>
 	<!-- fonts -->
+	<!-- roboto mono -->
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
+	<!-- roboto -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
@@ -18,7 +23,7 @@
 <body>
 	<nav>
 		<div class="nav-title-container">
-			<h2>Mental Health Awareness</h2>
+			<h1>Mental Health Awareness</h1>
 		</div>
 		<div class="nav-logo-container">
 			<img src="images/green-health-logo.png">
@@ -29,6 +34,10 @@
 			<a href="">Contact</a>
 		</div>
 	</nav>
+	<section class="introduction">
+		<h2>the importance of mental wellbeing</h2>
+		<p>Mental health awareness is about understanding the importance of mental well-being and recognising the signs of mental health issues. It involves <span>reducing stigma, promoting mental health education, and encouraging individuals to seek help when needed.</span> Our goal is to provide resources and support to enhance mental well-being for everyone.</p>
+	</section>
 </body>
 
 </html>
