feat/added 'benefits section' html

--- a/index.html
+++ b/index.html
@@ -38,6 +38,23 @@
 		<h2>the importance of mental wellbeing</h2>
 		<p>Mental health awareness is about understanding the importance of mental well-being and recognising the signs of mental health issues. It involves <span>reducing stigma, promoting mental health education, and encouraging individuals to seek help when needed.</span> Our goal is to provide resources and support to enhance mental well-being for everyone.</p>
 	</section>
+	<section class="benefits">
+		<h2>the benefits of mental health awareness</h2>
+		<div class="benefits-cards-container">
+			<div class="benefit-card">
+				<h3>Reduced Stigma</h3>
+				<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Excepturi, numquam!</p>
+			</div>
+			<div class="benefit-card">
+				<h3>Reduced Stigma</h3>
+				<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Excepturi, numquam!</p>
+			</div>
+			<div class="benefit-card">
+				<h3>Reduced Stigma</h3>
+				<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Excepturi, numquam!</p>
+			</div>
+		</div>
+	</section>
 </body>
 
 </html>
