--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
 			<a href="">Contact</a>
 		</div>
 	</nav>
+	<div class="background-img">
+		<img src="images/background-img-1.jpg">
+	</div>
 	<section class="introduction">
 		<h2>the importance of mental wellbeing</h2>
 		<p>Mental health awareness is about understanding the importance of mental well-being and recognising the signs of mental health issues. It involves <span>reducing stigma, promoting mental health education, and encouraging individuals to seek help when needed.</span> Our goal is to provide resources and support to enhance mental well-being for everyone.</p>
@@ -44,17 +47,17 @@
 			<div class="benefit-card">
 				<h3>Reduced Stigma</h3>
 				<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Excepturi, numquam!</p>
-				<button>learn more</button>
+				<button class="btn-1">learn more</button>
 			</div>
 			<div class="benefit-card">
 				<h3>Reduced Stigma</h3>
 				<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Excepturi, numquam!</p>
-				<button>learn more</button>
+				<button class="btn-1">learn more</button>
 			</div>
 			<div class="benefit-card">
 				<h3>Reduced Stigma</h3>
 				<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Excepturi, numquam!</p>
-				<button>learn more</button>
+				<button class="btn-1">learn more</button>
 			</div>
 		</div>
 	</section>
