fix/swapped nav with header aswell as some css adjustments

--- a/index.html
+++ b/index.html
@@ -21,19 +21,19 @@
 </head>
 
 <body>
-	<nav>
+	<header>
 		<div class="nav-title-container">
 			<h1>Mental Health Awareness</h1>
 		</div>
 		<div class="nav-logo-container">
 			<img src="images/green-health-logo.png">
 		</div>
-		<div class="nav-links-container">
+		<nav>
 			<a href="index.html">Home</a>
 			<a href="">Resources</a>
 			<a href="">Contact</a>
-		</div>
-	</nav>
+		</nav>
+	</header>
 	<div class="background-img">
 		<img src="images/background-img-1.jpg">
 	</div>
@@ -46,17 +46,17 @@
 		<div class="benefit-card-container">
 			<div class="benefit-card">
 				<h3>Reduced Stigma</h3>
-				<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Excepturi, numquam!</p>
+				<p>Raising awareness helps reduce the stigma associated with mental health conditions, making it easier for individuals to seek help.</p>
 				<button class="btn-1">learn more</button>
 			</div>
 			<div class="benefit-card">
-				<h3>Reduced Stigma</h3>
-				<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Excepturi, numquam!</p>
+				<h3>Improved Well-being</h3>
+				<p>Understanding mental health promotes better overall well-being and can prevent mental health issues from worsening.</p>
 				<button class="btn-1">learn more</button>
 			</div>
 			<div class="benefit-card">
-				<h3>Reduced Stigma</h3>
-				<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Excepturi, numquam!</p>
+				<h3>Enhanced Support</h3>
+				<p>Awareness leads to better support systems within communities, workplaces, and schools, providing help to those in need.</p>
 				<button class="btn-1">learn more</button>
 			</div>
 		</div>
