feat/added tips section html+ css skeleton

--- a/index.html
+++ b/index.html
@@ -61,6 +61,23 @@
 			</div>
 		</div>
 	</section>
+	<section class="tips">
+		<h2>mental health tips :</h2>
+		<div class="tips-container">
+			<img src="images/basketball-hoop.jpg">
+			<div class="tips-text-container">
+				<h3>Practice self-care and make time for activities you enjoy.</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem ad aliquam error hic magnam tenetur soluta distinctio ipsum deserunt harum.</p>
+			</div>
+		</div>
+		<div class="tips-container">
+			<div class="tips-text-container">
+				<h3>Practice self-care and make time for activities you enjoy.</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem ad aliquam error hic magnam tenetur soluta distinctio ipsum deserunt harum.</p>
+			</div>
+			<img src="images/basketball-hoop.jpg">
+		</div>
+	</section>
 </body>
 
 </html>
