feat/completed tips section styling

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
 	</section>
 	<section class="tips">
 		<h2>mental health tips :</h2>
+		<!-- image left | text right -->
 		<div class="tips-container">
 			<img src="images/basketball-hoop.jpg">
 			<div class="tips-text-container">
@@ -70,12 +71,45 @@
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem ad aliquam error hic magnam tenetur soluta distinctio ipsum deserunt harum.</p>
 			</div>
 		</div>
+		<!-- text left | image right -->
 		<div class="tips-container">
 			<div class="tips-text-container">
-				<h3>Practice self-care and make time for activities you enjoy.</h3>
+				<h3>Stay connected with friends and family.</h3>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem ad aliquam error hic magnam tenetur soluta distinctio ipsum deserunt harum.</p>
 			</div>
-			<img src="images/basketball-hoop.jpg">
+			<img src="images/family-on-sofa.jpg">
+		</div>
+		<!-- image left | text right -->
+		<div class="tips-container">
+			<img src="images/overwhelmed-man.jpg">
+			<div class="tips-text-container">
+				<h3>Seek professional help if you're feeling overwhelmed.</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem ad aliquam error hic magnam tenetur soluta distinctio ipsum deserunt harum.</p>
+			</div>
+		</div>
+		<!-- text left | image right -->
+		<div class="tips-container">
+			<div class="tips-text-container">
+				<h3>Maintain a balanced diet and get regular exercise.</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem ad aliquam error hic magnam tenetur soluta distinctio ipsum deserunt harum.</p>
+			</div>
+			<img src="images/excercise-group.jpg">
+		</div>
+		<!-- image left | text right -->
+		<div class="tips-container">
+			<img src="images/meditating-woman.jpg">
+			<div class="tips-text-container">
+				<h3>Engage in mindfulness practices such as meditation.</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem ad aliquam error hic magnam tenetur soluta distinctio ipsum deserunt harum.</p>
+			</div>
+		</div>
+		<!-- text left | image right -->
+		<div class="tips-container">
+			<div class="tips-text-container">
+				<h3>Educate yourself and others about mental health.</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem ad aliquam error hic magnam tenetur soluta distinctio ipsum deserunt harum.</p>
+			</div>
+			<img src="images/education-group.jpg">
 		</div>
 	</section>
 </body>
