feat/added footer + styling

--- a/index.html
+++ b/index.html
@@ -112,6 +112,9 @@
 			<img src="images/education-group.jpg">
 		</div>
 	</section>
+	<footer>
+		<p>&copy; 2024 Mental Health Awareness. All rights reserved.</p>
+	</footer>
 </body>
 
 </html>
