--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 </head>
 
 <body>
+	<!-- header / nav bar -->
 	<header>
 		<div class="nav-title-container">
 			<h1>Mental Health Awareness</h1>
@@ -34,6 +35,7 @@
 			<a href="">Contact</a>
 		</nav>
 	</header>
+	<!-- introduction + image -->
 	<div class="background-img">
 		<img src="images/background-img-1.jpg">
 	</div>
@@ -41,26 +43,34 @@
 		<h2>the importance of mental wellbeing</h2>
 		<p>Mental health awareness is about understanding the importance of mental well-being and recognising the signs of mental health issues. It involves <span>reducing stigma, promoting mental health education, and encouraging individuals to seek help when needed.</span> Our goal is to provide resources and support to enhance mental well-being for everyone.</p>
 	</section>
+	<!-- benefits of mental health banner -->
 	<section class="benefits">
 		<h2>the benefits of mental health awareness :</h2>
 		<div class="benefit-card-container">
 			<div class="benefit-card">
 				<h3>Reduced Stigma</h3>
 				<p>Raising awareness helps reduce the stigma associated with mental health conditions, making it easier for individuals to seek help.</p>
-				<button class="btn-1">learn more</button>
+				<button class="regular-btn">learn more</button>
 			</div>
 			<div class="benefit-card">
 				<h3>Improved Well-being</h3>
 				<p>Understanding mental health promotes better overall well-being and can prevent mental health issues from worsening.</p>
-				<button class="btn-1">learn more</button>
+				<button class="regular-btn">learn more</button>
 			</div>
 			<div class="benefit-card">
 				<h3>Enhanced Support</h3>
 				<p>Awareness leads to better support systems within communities, workplaces, and schools, providing help to those in need.</p>
-				<button class="btn-1">learn more</button>
+				<button class="regular-btn">learn more</button>
 			</div>
 		</div>
 	</section>
+	<!-- benefits of mental health modals (hidden by default) -->
+	<section class="benefits-modal-container">
+		<div class="benefits-modal-stigma"></div>
+		<div class="benefits-modal-wellbeing"></div>
+		<div class="benefits-modal-support"></div>
+	</section>
+	<!-- Tips list + images -->
 	<section class="tips">
 		<h2>mental health tips :</h2>
 		<!-- image left | text right -->
@@ -68,14 +78,14 @@
 			<img src="images/basketball-hoop.jpg">
 			<div class="tips-text-container">
 				<h3>Practice self-care and make time for activities you enjoy.</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem ad aliquam error hic magnam tenetur soluta distinctio ipsum deserunt harum.</p>
+				<p>Self-care routines that include breaks and relaxation can prevent burnout, making you more productive in the long run. Improves mental and emotional wellbeing: Activities like mindfulness, hobbies, and spending time in nature reduce stress and promote mental health, leading to a more balanced and fulfilling life.</p>
 			</div>
 		</div>
 		<!-- text left | image right -->
 		<div class="tips-container">
 			<div class="tips-text-container">
 				<h3>Stay connected with friends and family.</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem ad aliquam error hic magnam tenetur soluta distinctio ipsum deserunt harum.</p>
+				<p>Having a network of good relationships improves your wellbeing and can keep your mind active. Staying connected with others and taking part in social activities can also increase your confidence and improve how you feel about yourself.</p>
 			</div>
 			<img src="images/family-on-sofa.jpg">
 		</div>
@@ -84,14 +94,14 @@
 			<img src="images/overwhelmed-man.jpg">
 			<div class="tips-text-container">
 				<h3>Seek professional help if you're feeling overwhelmed.</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem ad aliquam error hic magnam tenetur soluta distinctio ipsum deserunt harum.</p>
+				<p>Recognize that talking about personal issues can be tough, but it can help you overcome them. In time, treatment should help you develop more coping skills, stronger relationships and a better sense of yourself. If you think you're not making progress, you should tell your provider.</p>
 			</div>
 		</div>
 		<!-- text left | image right -->
 		<div class="tips-container">
 			<div class="tips-text-container">
 				<h3>Maintain a balanced diet and get regular exercise.</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem ad aliquam error hic magnam tenetur soluta distinctio ipsum deserunt harum.</p>
+				<p>Eating a healthy balanced diet accompanied by regular exercise is essential in maintaining physical and mental health and well-being. Not only are these effective in preventing excess weight gain or in maintaining weight loss, but healthier lifestyles are also associated with improved sleep and mood.</p>
 			</div>
 			<img src="images/excercise-group.jpg">
 		</div>
@@ -100,14 +110,14 @@
 			<img src="images/meditating-woman.jpg">
 			<div class="tips-text-container">
 				<h3>Engage in mindfulness practices such as meditation.</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem ad aliquam error hic magnam tenetur soluta distinctio ipsum deserunt harum.</p>
+				<p>Researchers theorize that mindfulness meditation promotes metacognitive awareness, decreases rumination via disengagement from perseverative cognitive activities and enhances attentional capacities through gains in working memory. These cognitive gains, in turn, contribute to effective emotion-regulation strategies.</p>
 			</div>
 		</div>
 		<!-- text left | image right -->
 		<div class="tips-container">
 			<div class="tips-text-container">
 				<h3>Educate yourself and others about mental health.</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem ad aliquam error hic magnam tenetur soluta distinctio ipsum deserunt harum.</p>
+				<p>To live a happy life while coping with everyday stresses, we need to know how to handle our mental health. We can learn this while we are in school. Knowing the role mental health plays in their lives allows children to become happy adults. Happy, functional adults are better equipped to handle life.</p>
 			</div>
 			<img src="images/education-group.jpg">
 		</div>
