--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 	<script src="https://kit.fontawesome.com/97d0e9d86c.js" crossorigin="anonymous"></script>
 	<!-- css -->
 	<link rel="stylesheet" href="CSS/styles.css">
+	<!-- javascript -->
+	<script src="js/app.js" defer></script>
 </head>
 
 <body>
@@ -50,25 +52,25 @@
 			<div class="benefit-card">
 				<h3>Reduced Stigma</h3>
 				<p>Raising awareness helps reduce the stigma associated with mental health conditions, making it easier for individuals to seek help.</p>
-				<button class="regular-btn">learn more</button>
+				<button id="benefits-btn-stigma" class="regular-btn">learn more</button>
 			</div>
 			<div class="benefit-card">
 				<h3>Improved Well-being</h3>
 				<p>Understanding mental health promotes better overall well-being and can prevent mental health issues from worsening.</p>
-				<button class="regular-btn">learn more</button>
+				<button id="benefits-btn-wellbeing" class="regular-btn">learn more</button>
 			</div>
 			<div class="benefit-card">
 				<h3>Enhanced Support</h3>
 				<p>Awareness leads to better support systems within communities, workplaces, and schools, providing help to those in need.</p>
-				<button class="regular-btn">learn more</button>
+				<button id="benefits-btn-support" class="regular-btn">learn more</button>
 			</div>
 		</div>
 	</section>
 	<!-- benefits of mental health modals (hidden by default) -->
 	<section class="benefits-modal-container">
-		<div class="benefits-modal-stigma"></div>
-		<div class="benefits-modal-wellbeing"></div>
-		<div class="benefits-modal-support"></div>
+		<div id="benefits-modal-stigma" class="benefits-modal"></div>
+		<div id="benefits-modal-wellbeing" class="benefits-modal"></div>
+		<div id="benefits-modal-support" class="benefits-modal"></div>
 	</section>
 	<!-- Tips list + images -->
 	<section class="tips">
