feat/initial file setup, added nav bar + linked homepage and resources page.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Mental Health Awareness</title>
+	<title>Homepage | Mental Health Awareness</title>
 	<!-- fonts -->
 	<!-- roboto mono -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -33,7 +33,7 @@
 		</div>
 		<nav>
 			<a href="index.html">Home</a>
-			<a href="">Resources</a>
+			<a href="resources.html">Resources</a>
 			<a href="">Contact</a>
 		</nav>
 	</header>
@@ -68,9 +68,9 @@
 	</section>
 	<!-- benefits of mental health modals (hidden by default) -->
 	<section class="benefits-modal-container">
-		<div id="benefits-modal-stigma" class="benefits-modal"></div>
-		<div id="benefits-modal-wellbeing" class="benefits-modal"></div>
-		<div id="benefits-modal-support" class="benefits-modal"></div>
+		<div id="modal-stigma" class="benefits-modal"></div>
+		<div id="modal-wellbeing" class="benefits-modal"></div>
+		<div id="modal-support" class="benefits-modal"></div>
 	</section>
 	<!-- Tips list + images -->
 	<section class="tips">
