fix/added a backdrop filter instead of blur, text now sits appropriately

--- a/resources.html
+++ b/resources.html
@@ -37,6 +37,33 @@
 			<a href="">Contact</a>
 		</nav>
 	</header>
+	<!-- introductory title section-->
+	<section class="resources-intro">
+		<div class="intro-text">
+			<h1>mental health awareness resources</h1>
+		</div>
+	</section>
+	<!--
+	<section class="resources-intro">
+		<div class="rescorces-intro-text">
+			<h1>Mental Health Awareness Resources</h1>
+		</div>
+		<div class="resources-bg"></div>
+		<div class="resources-intro-bg">
+			<img src="resources-images/support-group-banner.jpg">
+		</div>
+		<div class="resources-intro-text">
+			<h1>Mental Health Awareness Resources</h1>
+		</div>
+	</section>-->
+	<!-- helplines & support section (dropdown bars)-->
+	<section class="helplines">
+		<div class="dropdown-container">
+			<div class="dropdown"></div>
+		</div>
+	</section>
+	<!-- educational materials section (img/container carousel)-->
+	<!-- therapeutic practices section (modals?)-->
 </body>
 
 </html>
