feat/added javascript for dropdown menus

--- a/resources.html
+++ b/resources.html
@@ -43,23 +43,34 @@
 			<h1>mental health awareness resources</h1>
 		</div>
 	</section>
-	<!--
-	<section class="resources-intro">
-		<div class="rescorces-intro-text">
-			<h1>Mental Health Awareness Resources</h1>
-		</div>
-		<div class="resources-bg"></div>
-		<div class="resources-intro-bg">
-			<img src="resources-images/support-group-banner.jpg">
-		</div>
-		<div class="resources-intro-text">
-			<h1>Mental Health Awareness Resources</h1>
-		</div>
-	</section>-->
 	<!-- helplines & support section (dropdown bars)-->
 	<section class="helplines">
+		<h2>helplines & support :</h2>
 		<div class="dropdown-container">
-			<div class="dropdown"></div>
+			<div>
+				<button id="dropdown-btn-samaritans" class="dropdown-btn-samaritans dropdown-btn">Samaritans</button>
+				<div id="dropdown-content-samaritans" class="dropdown-content dropdown-content-hide">
+					<p>Telephone Number</p>
+					<p>text message</p>
+					<p>website</p>
+				</div>
+			</div>
+			<div>
+				<button id="dropdown-btn-mind" class="dropdown-btn-mind dropdown-btn">Mind</button>
+				<div id="dropdown-content-mind" class="dropdown-content dropdown-content-hide">
+					<p>Telephone Number</p>
+					<p>text message</p>
+					<p>website</p>
+				</div>
+			</div>
+			<div>
+				<button id="dropdown-btn-shout" class="dropdown-btn-shout dropdown-btn">Shout</button>
+				<div id="dropdown-content-shout" class="dropdown-content dropdown-content-hide">
+					<p>Telephone Number</p>
+					<p>text message</p>
+					<p>website</p>
+				</div>
+			</div>
 		</div>
 	</section>
 	<!-- educational materials section (img/container carousel)-->
