feat/added logos to buttons

--- a/resources.html
+++ b/resources.html
@@ -46,25 +46,29 @@
 	<!-- helplines & support section (dropdown bars)-->
 	<section class="helplines">
 		<h2>helplines & support :</h2>
-		<div class="dropdown-container">
-			<div>
-				<button id="dropdown-btn-samaritans" class="dropdown-btn-samaritans dropdown-btn">Samaritans</button>
+		<!-- container holding the dropdown boxes -->
+		<div class="helplines-dropdown-container">
+			<!-- samaritans dropdown -->
+			<div class="helplines-dropdown helplines-dropdown-samaritans">
+				<button class="dropdown-btn-samaritans dropdown-btn"><img src="resources-images/samaritans-logo.png"></button>
 				<div id="dropdown-content-samaritans" class="dropdown-content dropdown-content-hide">
 					<p>Telephone Number</p>
 					<p>text message</p>
 					<p>website</p>
 				</div>
 			</div>
-			<div>
-				<button id="dropdown-btn-mind" class="dropdown-btn-mind dropdown-btn">Mind</button>
+			<!-- mind dropdown -->
+			<div class="helplines-dropdown helplines-dropdown-mind">
+				<button class="dropdown-btn-mind dropdown-btn"><img src="resources-images/mind-logo.png"></button>
 				<div id="dropdown-content-mind" class="dropdown-content dropdown-content-hide">
 					<p>Telephone Number</p>
 					<p>text message</p>
 					<p>website</p>
 				</div>
 			</div>
-			<div>
-				<button id="dropdown-btn-shout" class="dropdown-btn-shout dropdown-btn">Shout</button>
+			<!-- giveusashout dropdown -->
+			<div class="helplines-dropdown helplines-dropdown-shout">
+				<button class="dropdown-btn-shout dropdown-btn"><img src="resources-images/giveusashout-logo.png"></button>
 				<div id="dropdown-content-shout" class="dropdown-content dropdown-content-hide">
 					<p>Telephone Number</p>
 					<p>text message</p>
