feature+fix/added dropdown menus and removed logos until proper fix is avaliable

--- a/resources.html
+++ b/resources.html
@@ -50,29 +50,48 @@
 		<div class="helplines-dropdown-container">
 			<!-- samaritans dropdown -->
 			<div class="helplines-dropdown helplines-dropdown-samaritans">
-				<button class="dropdown-btn-samaritans dropdown-btn"><img src="resources-images/samaritans-logo.png"></button>
-				<div id="dropdown-content-samaritans" class="dropdown-content dropdown-content-hide">
-					<p>Telephone Number</p>
-					<p>text message</p>
-					<p>website</p>
+				<button class="dropdown-btn dropdown-btn-samaritans">samaritans</button>
+				<div id="dropdown-content-samaritans" class="dropdown-content-hide">
+					<div>
+						<p class="bold-p-text">Telephone Number : </p>
+						<p>116 123</p>
+					</div>
+					<div>
+						<p class="bold-p-text">Website : </p>
+						<a href="https://www.samaritans.org">www.samaritans.org</a>
+					</div>
 				</div>
 			</div>
 			<!-- mind dropdown -->
 			<div class="helplines-dropdown helplines-dropdown-mind">
-				<button class="dropdown-btn-mind dropdown-btn"><img src="resources-images/mind-logo.png"></button>
-				<div id="dropdown-content-mind" class="dropdown-content dropdown-content-hide">
-					<p>Telephone Number</p>
-					<p>text message</p>
-					<p>website</p>
+				<button class="dropdown-btn dropdown-btn-mind">mind</button>
+				<div id="dropdown-content-mind" class="dropdown-content-hide">
+					<div>
+						<p class="bold-p-text">Telephone Number : </p>
+						<p>0300 123 3393</p>
+					</div>
+					<div>
+						<p class="bold-p-text">Email : </p>
+						<a href="mailto: info@mind.org.uk">info@mind.org.uk</a>
+					</div>
+					<div>
+						<p class="bold-p-text">Website : </p>
+						<a href="https://www.mind.org.uk/">www.mind.org.uk</a>
+					</div>
 				</div>
 			</div>
 			<!-- giveusashout dropdown -->
 			<div class="helplines-dropdown helplines-dropdown-shout">
-				<button class="dropdown-btn-shout dropdown-btn"><img src="resources-images/giveusashout-logo.png"></button>
-				<div id="dropdown-content-shout" class="dropdown-content dropdown-content-hide">
-					<p>Telephone Number</p>
-					<p>text message</p>
-					<p>website</p>
+				<button class="dropdown-btn dropdown-btn-shout">giveusashout</button>
+				<div id="dropdown-content-shout" class="dropdown-content-hide">
+					<div>
+						<p class="bold-p-text">Text : </p>
+						<p>SHOUT to 85258</p>
+					</div>
+					<div>
+						<p class="bold-p-text">Website : </p>
+						<a href="https://giveusashout.org/">www.giveusashout.org</a>
+					</div>
 				</div>
 			</div>
 		</div>
