fix/committing before making dropdown changes in case of rollback needed

--- a/resources.html
+++ b/resources.html
@@ -50,6 +50,7 @@
 		<div class="helplines-dropdown-container">
 			<!-- samaritans dropdown -->
 			<div class="helplines-dropdown helplines-dropdown-samaritans">
+				<img src="resources-images/samaritans-logo.png">
 				<button class="dropdown-btn dropdown-btn-samaritans">samaritans</button>
 				<div id="dropdown-content-samaritans" class="dropdown-content-hide">
 					<div>
@@ -64,6 +65,7 @@
 			</div>
 			<!-- mind dropdown -->
 			<div class="helplines-dropdown helplines-dropdown-mind">
+				<img src="resources-images/mind-logo.png">
 				<button class="dropdown-btn dropdown-btn-mind">mind</button>
 				<div id="dropdown-content-mind" class="dropdown-content-hide">
 					<div>
@@ -82,6 +84,9 @@
 			</div>
 			<!-- giveusashout dropdown -->
 			<div class="helplines-dropdown helplines-dropdown-shout">
+				<div class="dropdown-img-shout">
+					<img src="resources-images/giveusashout-logo.png">
+				</div>
 				<button class="dropdown-btn dropdown-btn-shout">giveusashout</button>
 				<div id="dropdown-content-shout" class="dropdown-content-hide">
 					<div>
