fix/dropdown button is now the whole header now just the text

--- a/resources.html
+++ b/resources.html
@@ -49,45 +49,48 @@
 		<!-- container holding the dropdown boxes -->
 		<div class="helplines-dropdown-container">
 			<!-- samaritans dropdown -->
-			<div class="helplines-dropdown helplines-dropdown-samaritans">
-				<img src="resources-images/samaritans-logo.png">
-				<button class="dropdown-btn dropdown-btn-samaritans">samaritans</button>
+			<div>
+				<div class="dropdown-header dropdown-btn dropdown-btn-samaritans">
+					<img src="resources-images/samaritans-logo.png">
+					<h3>samaritans</h3>
+					<i class="fa-solid fa-angle-down"></i>
+				</div>
 				<div id="dropdown-content-samaritans" class="dropdown-content-hide">
 					<div>
-						<p class="bold-p-text">Telephone Number : </p>
-						<p>116 123</p>
+						<p class="bold-p-text">Text : </p>
+						<p>SHOUT to 85258</p>
 					</div>
 					<div>
 						<p class="bold-p-text">Website : </p>
-						<a href="https://www.samaritans.org">www.samaritans.org</a>
+						<a href="https://giveusashout.org/">www.giveusashout.org</a>
 					</div>
 				</div>
 			</div>
 			<!-- mind dropdown -->
-			<div class="helplines-dropdown helplines-dropdown-mind">
-				<img src="resources-images/mind-logo.png">
-				<button class="dropdown-btn dropdown-btn-mind">mind</button>
+			<div>
+				<div class="dropdown-header dropdown-btn dropdown-btn-mind">
+					<img src="resources-images/mind-logo.png">
+					<h3>mind</h3>
+					<i class="fa-solid fa-angle-down"></i>
+				</div>
 				<div id="dropdown-content-mind" class="dropdown-content-hide">
 					<div>
-						<p class="bold-p-text">Telephone Number : </p>
-						<p>0300 123 3393</p>
-					</div>
-					<div>
-						<p class="bold-p-text">Email : </p>
-						<a href="mailto: info@mind.org.uk">info@mind.org.uk</a>
+						<p class="bold-p-text">Text : </p>
+						<p>SHOUT to 85258</p>
 					</div>
 					<div>
 						<p class="bold-p-text">Website : </p>
-						<a href="https://www.mind.org.uk/">www.mind.org.uk</a>
+						<a href="https://giveusashout.org/">www.giveusashout.org</a>
 					</div>
 				</div>
 			</div>
 			<!-- giveusashout dropdown -->
-			<div class="helplines-dropdown helplines-dropdown-shout">
-				<div class="dropdown-img-shout">
+			<div>
+				<div class="dropdown-header dropdown-btn dropdown-btn-shout">
 					<img src="resources-images/giveusashout-logo.png">
+					<h3>giveusashout</h3>
+					<i class="fa-solid fa-angle-down"></i>
 				</div>
-				<button class="dropdown-btn dropdown-btn-shout">giveusashout</button>
 				<div id="dropdown-content-shout" class="dropdown-content-hide">
 					<div>
 						<p class="bold-p-text">Text : </p>
