feat/completed helplines buttons with animation

--- a/resources.html
+++ b/resources.html
@@ -57,12 +57,12 @@
 				</div>
 				<div id="dropdown-content-samaritans" class="dropdown-content-hide">
 					<div>
-						<p class="bold-p-text">Text : </p>
-						<p>SHOUT to 85258</p>
+						<p class="bold-p-text">Telephone : </p>
+						<p>116 123</p>
 					</div>
 					<div>
 						<p class="bold-p-text">Website : </p>
-						<a href="https://giveusashout.org/">www.giveusashout.org</a>
+						<a href="https://www.samaritans.org">samaritans.org</a>
 					</div>
 				</div>
 			</div>
@@ -75,12 +75,16 @@
 				</div>
 				<div id="dropdown-content-mind" class="dropdown-content-hide">
 					<div>
+						<p class="bold-p-text">Telephone : </p>
+						<p>0300 123 3393</p>
+					</div>
+					<div>
 						<p class="bold-p-text">Text : </p>
-						<p>SHOUT to 85258</p>
+						<p>86463</p>
 					</div>
 					<div>
 						<p class="bold-p-text">Website : </p>
-						<a href="https://giveusashout.org/">www.giveusashout.org</a>
+						<a href="https://www.mind.org.uk/">mind.org.uk</a>
 					</div>
 				</div>
 			</div>
