feat/html added for educational resources section

--- a/resources.html
+++ b/resources.html
@@ -108,7 +108,42 @@
 			</div>
 		</div>
 	</section>
-	<!-- educational materials section (img/container carousel)-->
+	<!-- educational materials section (img + details container)-->
+	<section class="educational">
+		<!-- NHS container -->
+		<div class="education-container">
+			<div class="education-container-img">
+				<img src="resources-images/nhs-image.jpg">
+			</div>
+			<div class="education-container-details">
+				<h3>NHS Mental Health Services</h3>
+				<p></p>
+				<a></a>
+			</div>
+		</div>
+		<!-- MHF container -->
+		<div class="education-container">
+			<div class="education-container-details">
+				<h3>Mental Health Foundation</h3>
+				<p></p>
+				<a></a>
+			</div>
+			<div class="education-container-img">
+				<img src="resources-images/mhf-image.png">
+			</div>
+		</div>
+		<!-- young minds container -->
+		<div class="education-container">
+			<div class="education-container-img">
+				<img src="resources-images/youngminds-image.png">
+			</div>
+			<div class="education-container-details">
+				<h3>YoungMinds</h3>
+				<p></p>
+				<a></a>
+			</div>
+		</div>
+	</section>
 	<!-- therapeutic practices section (modals?)-->
 </body>
 
