feat/completed styling for educational resources section

--- a/resources.html
+++ b/resources.html
@@ -43,6 +43,11 @@
 			<h1>mental health awareness resources</h1>
 		</div>
 	</section>
+	<!-- information section -->
+	<div class="info-paragraph">
+		<h3>we are here for you!</h3>
+		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde minima repellat accusantium? Illo officiis amet fuga fugit! Repellendus eligendi nihil, unde molestias accusantium ex perspiciatis quaerat eveniet sint eius quidem dolorum voluptatum cum numquam placeat dicta atque magnam! Reiciendis labore nemo eaque debitis ipsa vel iusto quod deleniti? Ipsa sunt at ratione, natus nam atque perspiciatis aliquam illum. Cumque reprehenderit architecto adipisci qui dolor harum perspiciatis sapiente minima delectus fuga?</p>
+	</div>
 	<!-- helplines & support section (dropdown bars)-->
 	<section class="helplines">
 		<h2>helplines & support :</h2>
@@ -112,35 +117,29 @@
 	<section class="educational">
 		<!-- NHS container -->
 		<div class="education-container">
-			<div class="education-container-img">
-				<img src="resources-images/nhs-image.jpg">
-			</div>
+			<img src="resources-images/nhs-image.jpg">
 			<div class="education-container-details">
 				<h3>NHS Mental Health Services</h3>
-				<p></p>
-				<a></a>
+				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui praesentium quibusdam autem, nesciunt placeat, totam accusamus mollitia, vel corporis voluptas recusandae exercitationem provident aspernatur error eos perspiciatis nemo esse? Laboriosam eligendi aspernatur tempora cumque accusamus.</p>
+				<a href="https://www.nhs.uk/mental-health"><i class="fa-solid fa-angle-left"></i> Find out more</a>
 			</div>
 		</div>
 		<!-- MHF container -->
 		<div class="education-container">
 			<div class="education-container-details">
 				<h3>Mental Health Foundation</h3>
-				<p></p>
-				<a></a>
+				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, magni facilis sit nemo facere dicta minus pariatur repellendus neque minima porro accusamus? Quis, earum? Distinctio natus eaque, ad quidem expedita cum ab? Eaque, natus aut.</p>
+				<a href="https://www.mentalhealth.org.uk/">Find out more <i class="fa-solid fa-angle-right"></i></a>
 			</div>
-			<div class="education-container-img">
-				<img src="resources-images/mhf-image.png">
-			</div>
+			<img src="resources-images/mhf-image.png">
 		</div>
 		<!-- young minds container -->
 		<div class="education-container">
-			<div class="education-container-img">
-				<img src="resources-images/youngminds-image.png">
-			</div>
+			<img src="resources-images/youngminds-image.png">
 			<div class="education-container-details">
-				<h3>YoungMinds</h3>
-				<p></p>
-				<a></a>
+				<h3>Young Minds</h3>
+				<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae esse, ut eaque blanditiis sunt repudiandae consectetur saepe repellat animi accusantium. Iusto magnam expedita animi nesciunt ipsa. Exercitationem molestiae neque, recusandae ex praesentium perferendis nulla fugit!</p>
+				<a href="https://www.youngminds.org.uk/"><i class="fa-solid fa-angle-left"></i> Find out more </a>
 			</div>
 		</div>
 	</section>
