feat/added treatments section and made final styling tweaks

--- a/resources.html
+++ b/resources.html
@@ -46,7 +46,7 @@
 	<!-- information section -->
 	<div class="info-paragraph">
 		<h3>we are here for you!</h3>
-		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde minima repellat accusantium? Illo officiis amet fuga fugit! Repellendus eligendi nihil, unde molestias accusantium ex perspiciatis quaerat eveniet sint eius quidem dolorum voluptatum cum numquam placeat dicta atque magnam! Reiciendis labore nemo eaque debitis ipsa vel iusto quod deleniti? Ipsa sunt at ratione, natus nam atque perspiciatis aliquam illum. Cumque reprehenderit architecto adipisci qui dolor harum perspiciatis sapiente minima delectus fuga?</p>
+		<p>Just as your body can become unwell, your mind can become unwell too. And just like with physical illnesses, treatment and support is available. Use our guides to find out more about different mental health conditions, how to cope with your feelings and what support is available to you.</p>
 	</div>
 	<!-- helplines & support section (dropdown bars)-->
 	<section class="helplines">
@@ -120,7 +120,7 @@
 			<img src="resources-images/nhs-image.jpg">
 			<div class="education-container-details">
 				<h3>NHS Mental Health Services</h3>
-				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui praesentium quibusdam autem, nesciunt placeat, totam accusamus mollitia, vel corporis voluptas recusandae exercitationem provident aspernatur error eos perspiciatis nemo esse? Laboriosam eligendi aspernatur tempora cumque accusamus.</p>
+				<p>Information on mental health services provided by the NHS, including self-help resources and where to get urgent help.</p>
 				<a href="https://www.nhs.uk/mental-health"><i class="fa-solid fa-angle-left"></i> Find out more</a>
 			</div>
 		</div>
@@ -128,7 +128,7 @@
 		<div class="education-container">
 			<div class="education-container-details">
 				<h3>Mental Health Foundation</h3>
-				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, magni facilis sit nemo facere dicta minus pariatur repellendus neque minima porro accusamus? Quis, earum? Distinctio natus eaque, ad quidem expedita cum ab? Eaque, natus aut.</p>
+				<p>Provides a range of resources on mental health conditions, wellbeing, and support options.</p>
 				<a href="https://www.mentalhealth.org.uk/">Find out more <i class="fa-solid fa-angle-right"></i></a>
 			</div>
 			<img src="resources-images/mhf-image.png">
@@ -138,12 +138,46 @@
 			<img src="resources-images/youngminds-image.png">
 			<div class="education-container-details">
 				<h3>Young Minds</h3>
-				<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae esse, ut eaque blanditiis sunt repudiandae consectetur saepe repellat animi accusantium. Iusto magnam expedita animi nesciunt ipsa. Exercitationem molestiae neque, recusandae ex praesentium perferendis nulla fugit!</p>
+				<p>Focuses on the mental health of children and young people, offering resources for young people, parents, and professionals.</p>
 				<a href="https://www.youngminds.org.uk/"><i class="fa-solid fa-angle-left"></i> Find out more </a>
 			</div>
 		</div>
 	</section>
 	<!-- therapeutic practices section (modals?)-->
+	<div class="info-paragraph">
+		<h3>what treatments are avaliable?</h3>
+		<p>There are many possible causes of negative mental health which may result in you needing a tailored treatment for your cause. Use our partners guides below to help treat a negative mindset.</p>
+	</div>
+	<section class="treatments">
+		<div class="treatments-container">
+			<h3>Mindfulness Meditation</h3>
+			<img src="resources-images/meditation-therapy-image.webp">
+			<p>Practices and techniques to help reduce stress and improve mental clarity.</p>
+			<div>
+				<a href="https://www.bemindful.co.uk/">Learn more</a>
+			</div>
+		</div>
+		<div class="treatments-container">
+			<h3>Cognitive Behavioral Therapy (CBT)</h3>
+			<img src="resources-images/cbt-therapy-image.jpeg">
+			<p>A type of therapy that helps identify and change negative thought patterns.</p>
+			<div>
+				<a href="https://www.babcp.com/">Learn more</a>
+			</div>
+		</div>
+		<div class="treatments-container">
+			<h3>Dialectical Behavior Therapy (DBT)</h3>
+			<img src="resources-images/dbt-therapy-image.jpg">
+			<p>A type of cognitive-behavioral therapy that focuses on teaching coping skills to manage stress and regulate emotions.</p>
+			<div>
+				<a href="https://www.dbtselfhelp.com/">Learn more</a>
+			</div>
+		</div>
+	</section>
+	<!-- footer -->
+	<footer>
+		<p>&copy; 2024 Mental Health Awareness. All rights reserved.</p>
+	</footer>
 </body>
 
 </html>
