--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		<nav>
 			<a href="index.html">Home</a>
 			<a href="resources.html">Resources</a>
-			<a href="">Contact</a>
+			<a href="contact.html">Contact</a>
 		</nav>
 	</header>
 	<!-- introduction + image -->
