--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
 	<!-- css -->
 	<link rel="stylesheet" href="CSS/styles.css">
 	<!-- javascript -->
-	<script src="js/app.js" defer></script>
+	<script src="js/contact.js" defer></script>
 </head>
 
 <body>
@@ -37,6 +37,48 @@
 			<a href="contact.html">Contact</a>
 		</nav>
 	</header>
+	<!-- contact us intro -->
+	<section class="contact-intro">
+		<h1>get in touch with us:</h1>
+		<p>We'd love to hear from you! Whether you have a question about our resources, a suggestion for new content, or just want to share your feedback, feel free to reach out. Your input is valuable in helping us promote mental health awareness and support.</p>
+	</section>
+	<!-- page container left / right -->
+	<section class="page-container">
+		<form>
+			<div class="contact-form-group">
+				<label for="name">Full Name<span class="required-red">*</span></label>
+				<br>
+				<input class="contact-input" id='user-name' type="text" name="user_name" required>
+				<br>
+				<span id="name-input-subheading">Minimum 5 characters</span>
+			</div>
+			<div class="contact-form-group">
+				<label for=" email">Email<span class="required-red">*</span></label>
+				<br>
+				<input class="contact-input" id='user-email' type="email" name="user_email" required>
+				<br>
+				<span id="email-input-subheading">Maximum of 255 characters, includes '@' </span>
+			</div>
+			<div class="contact-form-group">
+				<label for="message">Reason for contacting us</label>
+				<br>
+				<textarea class="contact-input-textarea" id='user-message' name="user_message"></textarea>
+				<br>
+				<span id="msg-input-subheading" ">Minimum 50 characters, maximum of 500 characters</span>
+			</div>
+			<div class=" contact-form-group contact-checkbox">
+					<label>Please accept our Terms & Conditions<span class=" required-red">*</span></label>
+					<br>
+					<input id="user-checkbox" type="checkbox" name="terms_and_conditions" required>
+					<br>
+					<span id="checkbox-subheading">This checkbox must be ticked</span>
+			</div>
+			<div class="contact-form-group contact-submit-btn">
+				<input type="submit" id="submit-btn" class="submit-btn" disabled>
+			</div>
+		</form>
+	</section>
+	</section>
 </body>
 
 </html>
