feat/changed website font alongside styling of contact page

--- a/contact.html
+++ b/contact.html
@@ -6,14 +6,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Contact | Mental Health Awareness</title>
 	<!-- fonts -->
-	<!-- roboto mono -->
+	<!-- merriweather -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
-	<!-- roboto -->
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+
 	<!-- font awesome -->
 	<script src="https://kit.fontawesome.com/97d0e9d86c.js" crossorigin="anonymous"></script>
 	<!-- css -->
@@ -39,11 +36,13 @@
 	</header>
 	<!-- contact us intro -->
 	<section class="contact-intro">
-		<h1>get in touch with us:</h1>
-		<p>We'd love to hear from you! Whether you have a question about our resources, a suggestion for new content, or just want to share your feedback, feel free to reach out. Your input is valuable in helping us promote mental health awareness and support.</p>
+		<h1>Get in touch with us:</h1>
 	</section>
 	<!-- page container left / right -->
-	<section class="page-container">
+	<section class="contact-page-container">
+		<div class="contact-information-section">
+			<p>We'd love to hear from you! Whether you have a question about our resources, a suggestion for new content, or just want to share your feedback, feel free to reach out. Your input is valuable in helping us promote mental health awareness and support.</p>
+		</div>
 		<form>
 			<div class="contact-form-group">
 				<label for="name">Full Name<span class="required-red"> *</span></label>
@@ -78,7 +77,9 @@
 			</div>
 		</form>
 	</section>
-	</section>
+	<footer>
+		<p>&copy; 2024 Mental Health Awareness. All rights reserved.</p>
+	</footer>
 </body>
 
 </html>
