--- a/resources.html
+++ b/resources.html
@@ -6,14 +6,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Resources | Mental Health Awareness</title>
 	<!-- fonts -->
-	<!-- roboto mono -->
+	<!-- merriweather -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
-	<!-- roboto -->
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
 	<!-- font awesome -->
 	<script src="https://kit.fontawesome.com/97d0e9d86c.js" crossorigin="anonymous"></script>
 	<!-- css -->
@@ -40,17 +36,17 @@
 	<!-- introductory title section-->
 	<section class="resources-intro">
 		<div class="intro-text">
-			<h1>mental health awareness resources</h1>
+			<h1>Mental Health Awareness Resources</h1>
 		</div>
 	</section>
 	<!-- information section -->
 	<div class="info-paragraph">
-		<h3>we are here for you!</h3>
+		<h3>We are here for you!</h3>
 		<p>Just as your body can become unwell, your mind can become unwell too. And just like with physical illnesses, treatment and support is available. Use our guides to find out more about different mental health conditions, how to cope with your feelings and what support is available to you.</p>
 	</div>
 	<!-- helplines & support section (dropdown bars)-->
 	<section class="helplines">
-		<h2>helplines & support :</h2>
+		<h2>Helplines & Support :</h2>
 		<!-- container holding the dropdown boxes -->
 		<div class="helplines-dropdown-container">
 			<!-- samaritans dropdown -->
@@ -145,7 +141,7 @@
 	</section>
 	<!-- therapeutic practices section (modals?)-->
 	<div class="info-paragraph">
-		<h3>what treatments are avaliable?</h3>
+		<h3>What treatments are avaliable?</h3>
 		<p>There are many possible causes of negative mental health which may result in you needing a tailored treatment for your cause. Use our partners guides below to help treat a negative mindset.</p>
 	</div>
 	<section class="treatments">
