feat/completed contact page

--- a/contact.html
+++ b/contact.html
@@ -40,9 +40,51 @@
 	</section>
 	<!-- page container left / right -->
 	<section class="contact-page-container">
+		<!-- social media / contact us section -->
 		<div class="contact-information-section">
 			<p>We'd love to hear from you! Whether you have a question about our resources, a suggestion for new content, or just want to share your feedback, feel free to reach out. Your input is valuable in helping us promote mental health awareness and support.</p>
+			<!-- contact info -->
+			<div class="contact-info-container">
+				<div class="contact-info-item">
+					<i class="fa-solid fa-envelope"></i>
+					<label for="email">Email</label>
+					<p>info@mentalhealthawareness.com</p>
+				</div>
+				<div class="contact-info-item">
+					<i class="fa-solid fa-phone"></i>
+					<label for="phone">Phone</label>
+					<p>(123) 456-7890</p>
+				</div>
+				<div class="contact-info-item">
+					<i class="fa-solid fa-location-dot"></i>
+					<label for="address">Address</label>
+					<p>123 Wellness Ave, Mindful City, Health State, 78901</p>
+				</div>
+			</div>
+			<!-- social media -->
+			<div class="social-media-container">
+				<h3>Follow us on Social Media!</h3>
+				<div class="social-media-item facebook-item">
+					<a href="https://www.facebook.com/">
+						<i class="fa-brands fa-square-facebook"></i>
+						<p>Mental Health Awareness</p>
+					</a>
+				</div>
+				<div class="social-media-item twitter-item">
+					<a href="https://www.x.com">
+						<i class="fa-brands fa-square-x-twitter"></i>
+						<p>@MentalHealthAwareness</p>
+					</a>
+				</div>
+				<div class="social-media-item instagram-item">
+					<a href="https://www.instagram.com">
+						<i class="fa-brands fa-square-instagram"></i>
+						<p>@MentalHealthAwareness</p>
+					</a>
+				</div>
+			</div>
 		</div>
+		<!-- form section-->
 		<form>
 			<div class="contact-form-group">
 				<label for="name">Full Name<span class="required-red"> *</span></label>
@@ -77,7 +119,7 @@
 			</div>
 		</form>
 	</section>
-	<footer>
+	<footer class="contact-footer">
 		<p>&copy; 2024 Mental Health Awareness. All rights reserved.</p>
 	</footer>
 </body>
