fix/positioned contact-page footer using fixed instead of using margins to keep it at bootom of page

--- a/contact.html
+++ b/contact.html
@@ -119,7 +119,7 @@
 			</div>
 		</form>
 	</section>
-	<footer class="contact-footer">
+	<footer class="contact-page-footer">
 		<p>&copy; 2024 Mental Health Awareness. All rights reserved.</p>
 	</footer>
 </body>
