--- a/contact.html
+++ b/contact.html
@@ -17,6 +17,8 @@
 	<link rel="stylesheet" href="CSS/styles.css">
 	<!-- javascript -->
 	<script src="js/contact.js" defer></script>
+	<!-- light / dark mode theme -->
+	<script src="js/theme.js" defer></script>
 </head>
 
 <body>
@@ -121,6 +123,9 @@
 	</section>
 	<footer class="contact-page-footer">
 		<p>&copy; 2024 Mental Health Awareness. All rights reserved.</p>
+		<button id="theme-toggle-btn" class="theme-toggle-btn">
+			<div id="theme-toggle-btn-sprite" class="theme-toggle-btn-sprite theme-state-light"></div>
+		</button>
 	</footer>
 </body>
 
