--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 	<link rel="stylesheet" href="CSS/styles.css">
 	<!-- javascript -->
 	<script src="js/app.js" defer></script>
+	<!-- light / dark mode theme -->
+	<script src="js/theme.js" defer></script>
 </head>
 
 <body>
