fix/fixed dark mode colour scheme

--- a/index.html
+++ b/index.html
@@ -124,6 +124,9 @@
 	</section>
 	<footer>
 		<p>&copy; 2024 Mental Health Awareness. All rights reserved.</p>
+		<button id="theme-toggle-btn" class="theme-toggle-btn">
+			<div id="theme-toggle-btn-sprite" class="theme-toggle-btn-sprite theme-state-light"></div>
+		</button>
 	</footer>
 </body>
 
